[workspace]
members = ["node", "runtime", "pallets/nolik", "client", "client/metadata", "client/js-wasm"]
[profile.release]
panic = "unwind"

[profile.release.package.js-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release.package.nolik-metadata]
strip = "debuginfo"
opt-level = "s"
