[package]
name = "nolik-client"
version = "0.1.3-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Chainify <https://github.com/chainify>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = "12.0.0"
sp-keyring = "12.0.0"
parity-scale-codec = "3.1.2"

subxt = "0.26.0"
# axum = "0.6.4"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.68"
tokio = { version = "1.25", features = ["full"] }
# tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crypto_box = "0.8"
hex = "0.4.3"
serde_json = { version = "1.0.64", features = ["raw_value"] }
blake2 = "0.10.4"
nolik-cypher = { path = "./cypher" }
nolik-metadata = { path = "./metadata" }
