[package]
name = "nolik-cypher"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.98", features = ["full", "fold", "extra-traits", "visit"] }
proc-macro2 = "1.0.37"
blake2 = { version = "0.10.4", default-features = false }
proc-macro-crate = "1.1.3"
