[package]
name = "nolik-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

crypto_box = { version = "0.8", optional = true }
nolik-cypher = { path = "../cypher", optional = true }
blake2 = { version = "0.10", optional = true, default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "nolik-cypher", "crypto_box/std", "blake2"]
