[package]
name = 'pallet-nolik'
version = '0.1.3-dev'
description = 'Substrate FRAME pallet for Zero-Trust data exchange'
authors = ['Chainify <https://github.com/chainify>']
edition = '2021'
license = 'Apace 2.0'
publish = false
repository = 'https://github.com/chainify/substrate-nolik-dev/'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.28"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.28"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = "2.1.2"


[dev-dependencies.rand]
version = "0.8.0"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.28"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.28"

[features]
default = ['std']
std = [
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
]
try-runtime = ['frame-support/try-runtime']
